# ForeScale

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
experiments/: __init__.py  k8s_runner.py  preview_traffic.py  run_comparison.py  simulator.py
experiments/tests/: test_simulator.py
forecaster/: __init__.py  baseline.py  features.py  hgb_forecaster.py  interface.py  train.py
forecaster/tests/: test_forecaster.py  test_replica_math.py  test_stabilization.py
helm/forescale/: Chart.yaml  values.yaml
helm/forescale/templates/: _helpers.tpl  configmap.yaml  controller.yaml  hpa.yaml  inference-api.yaml  observability.yaml
k8s/: 00-namespace.yaml  10-configmap.yaml  20-inference-api.yaml  30-controller-rbac.yaml  31-controller.yaml  40-hpa.yaml  50-ingress.yaml  60-prometheus.yaml  70-grafana.yaml  kind-config.yaml
libs/: pyproject.toml
libs/forescale_core/: __init__.py  replica_math.py  stabilization.py  traffic.py
observability/: prometheus-compose.yml  prometheus.yml
observability/grafana/: dashboard.json  dashboards.yaml  datasource.yaml
results/: results.md
services/forescale-controller/: Dockerfile  app.py  requirements.txt
services/inference-api/: Dockerfile  app.py
services/load-generator/: Dockerfile  app.py  requirements.txt
