[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forescale-core"
version = "0.1.0"
description = "Shared core for ForeScale: reproducible traffic curve + replica math."
requires-python = ">=3.10"
dependencies = ["numpy>=1.26"]

[tool.setuptools]
packages = ["forescale_core"]
